# tudu-server

./: .gitignore  Cargo.toml  azure-pipelines.yml
migrations/2019-02-24-131446_user_auth/: up.sql
migrations/2019-03-07-111757_session/: up.sql
migrations/2019-03-13-115330_pluralize_tables/: up.sql
src/: api.rs  db.rs  errors.rs  main.rs  schema.rs
src/api/: index.rs  login.rs  logout.rs  mod.rs  register.rs
