[package]
name = "tudu-server"
version = "0.1.0"
authors = ["mandreyel <mandreyel@protonmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
bcrypt = "0.3"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0", features = ["mysql", "uuid", "r2d2", "chrono"] }
dotenv = "0.9"
failure = "0.1"
futures = "0.1.2"
log = "0.4"
simplelog = "^0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
